# pyvistra

./: .gitignore  CLAUDE.md  PLAN_IMAGE_BUFFER.md  PLAN_TILED_VIEWER.md  README.md  check_camera_events.py  check_events.py  debug_segfault.py  main.py  pyproject.toml  reproduce_zero_percentile.py  requirements.txt  test_analysis.py  test_save.py  test_z_ui.py
impy/: __init__.py  __main__.py  io.py  manager.py  ortho.py  roi_manager.py  rois.py  styles.py  theme.py  tiled_viewer.py  ui.py  visuals.py  widgets.py
pyvistra/: __init__.py  __main__.py  analysis.py  console.py  imaris_reader.py  io.py  lab.py  manager.py  ortho.py  roi_manager.py  rois.py  theme.py  tiled_viewer.py  ui.py  visuals.py  widgets.py
scripts/: peek_imaris.py  reproduce_roi_error.py
tests/: test_channel_panel.py  test_dims_normalization.py  test_quit_segfaults.py  vispy_coordinates.py
